# hass-estudna2

./: .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  hacs.yml  pre-commit.yml
custom_components/estudna2/: __init__.py  config_flow.py  const.py  estudna.py  manifest.json  sensor.py
