[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools==75.8.0"]

[project]
name = "homeassistant-estudna2"
requires-python = ">=3.12.0"
version = "0.5.0"

#[tool.codespell]
#ignore-words-list = "hass"

[tool.ruff]
required-version = ">=0.8.0"
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W"]        # kontrola chyb F821, E/W
ignore = [
  "D202",
  "D203",
  "D213",
  "D406",
  "D407",
  "E501",
  "PLC1901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR2004",
  "PLW2901",
  "PT011",
  "PT018",
  "RUF001",
  "RUF002",
  "RUF003",
  "RUF015",
  "SIM102",
  "SIM103",
  "SIM108",
  "SIM115",
  "TC001",
  "TC002",
  "TC003",
  "TRY003",
  "TRY400",
  "UP038",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q",
  "COM812",
  "COM819",
  "ISC001",
  "PLE0605",
  "TRY002",
  "D"
]
